--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International Space Station Inventory Management System</title>
-    <link rel="stylesheet" href="index.css"></link>
+    <link rel="stylesheet" href="homepage.css"></link>
 </head>
 <body>
     <div id="container_whole">
@@ -15,8 +15,9 @@
         </div>
         <div id="rect1"></div>
         <div id="rect2"></div>
-        <button id="look_up">Supplies Look-up</button>
-        <button id="import">Import Files</button>
+        <a id="look_up_link" href="./info.html"><button id="look_up" type="submit" > Look-up</button></a>
+        <a id="import_link" href="./info.html"><button id="import" type="submit"> Import Files</button></a>
+
     </div>
 </body>
 </html>
