--- a/info.html
+++ b/info.html
@@ -3,9 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Files</title>
+    <link rel="stylesheet" href="./info.css">
 </head>
 <body>
-    <div id="container_whole">I love Tacos</div>
-    <div> me gusta papas con huevo</div>
+    <div id="container_whole">
+        <div id="navbar">
+            <button id="back_button" class="button_press" type="submit">Back</button>
+            <button id="menu_button" class="button_press"type="submit">Menu</button>
+            <button id="reset_button" class="button_press"type="submit">Reset</button>
+        </div>
+
+        <div id="info_screen">
+            <div id="top" class="info_squares">No Warnings<br>Supplies Normal</div>
+            <div id="mid" class="info_squares">Date - 00/00/00</div>
+            <div id="bot" class="info_squares">Water(H_2O)</div>
+        </div>
+    </div>
 </body>
 </html>
