--- a/info.html
+++ b/info.html
@@ -18,6 +18,8 @@
             <div id="mid" class="info_squares">Date - 00/00/00</div>
             <div id="bot" class="info_squares">Water(H_2O)</div>
         </div>
+
+        <div id="graph_box"></div>
     </div>
 </body>
 </html>
