Roberto's minor updates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Predictive International Space Station Inventory Application
         </div>
         <div id="picture_container">
-            <image id="iss" src="./iss.jpg"></image>
+            <image id="iss" src="./iss.jpg" alt="picture of the ISS in orbit"></image>
         </div>
         <div id="rect1"></div>
         <div id="rect2"></div>
