--- a/info.html
+++ b/info.html
@@ -8,9 +8,9 @@
 <body>
     <div id="container_whole">
         <div id="navbar">
-            <button id="back_button" class="button_press" type="submit">Back</button>
-            <button id="menu_button" class="button_press"type="submit">Menu</button>
-            <button id="reset_button" class="button_press"type="submit">Reset</button>
+            <a id="look_up_link" href="./index.html"><button id="back_button" class="button_press" type="submit">Back</button></a>
+            <a id="look_up_link" href="./index.html"><button id="menu_button" class="button_press"type="submit">Menu</button></a>
+            <a id="look_up_link" href="./index.html"><button id="reset_button" class="button_press"type="submit">Reset</button></a>
         </div>
 
         <div id="info_screen">
