--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="rect1"></div>
         <div id="rect2"></div>
-        <a id="look_up_link" href="./info.html"><button id="look_up" type="submit" > Look-up</button></a>
+        <a id="look_up_link" href="./info.html"><button id="look_up" type="submit" > Look-Up Data</button></a>
         <a id="import_link" href="./info.html"><button id="import" type="submit"> Import Files</button></a>
 
     </div>
