--- a/info.html
+++ b/info.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Files</title>
+    <link rel="stylesheet" href="import.css"></link>
 </head>
 <body>
     <div id="container_whole">I love Tacos</div>
-    <div> me gusta papas con huevo</div>
+    <div id="temp">A haughty spirit, high in pride, comes before a mighty destruction.</div>
 </body>
 </html>
