graphical component added

--- a/info.html
+++ b/info.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Files</title>
     <link rel="stylesheet" href="./info.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    
+
 </head>
 <body>
     <div id="container_whole">
@@ -33,11 +37,17 @@
                     <div class="choices" id="water"><a href="#">Water</a></div>
                     <div class="choices" id="oxygen"><a href="#">Oxygen</a></div>
                     <div class="choices" id="food"><a href="#">Food</a></div>
+                </div>
+            </div>
         </div>
 
-        <div id="graph_box"></div>
+        <div id="graph_box">
+            <div id="tester"></div>
+        </div>
+        
     </div>
 </body>
 
 <script src="info.js"></script>
+
 </html>
